# robomonkey

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  robomonkey.sublime-project  test.py
jetson/: CMakeLists.txt  README.md
jetson/mkycom/: CMakeLists.txt  mkycom-config.cmake
jetson/mkycom/include/: infantry_info.h  mkycom.h
jetson/mkycom/rmlib/: CMakeLists.txt
jetson/mkycom/rmlib/include/: cmsis_os.h  communicate.h  data_fifo.h  infantry_info.h  protocol.h  rmlib.hpp  stm32f4xx_hal.h
jetson/mkycom/rmlib/src/: CMakeLists.txt  communicate.c  data_fifo.c  protocol.c  rmlib-config.cmake
jetson/mkycom/src/: CMakeLists.txt  mkycom.cpp  mkycom_test.cpp
ros/: apriltag.rviz
ros/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros/devel/include/apriltags2_ros/: AnalyzeSingleImageResponse.h  AprilTagDetection.h
ros/devel/include/image_proc/: DebayerConfig.h  RectifyConfig.h
ros/devel/include/image_view/: ImageViewConfig.h
ros/devel/include/realsense2_camera/: IMUInfo.h  base_d400_paramsConfig.h  rs415_paramsConfig.h  rs435_paramsConfig.h  sr300_paramsConfig.h
ros/devel/include/stereo_image_proc/: DisparityConfig.h
ros/devel/lib/apriltags2_ros/: apriltags2_ros_continuous_node  apriltags2_ros_single_image_client_node  apriltags2_ros_single_image_server_node
ros/devel/lib/image_proc/: image_proc
ros/devel/lib/image_publisher/: image_publisher
ros/devel/lib/image_rotate/: image_rotate
ros/devel/lib/image_view/: disparity_view  extract_images  image_saver  image_view  stereo_view  video_recorder
ros/devel/lib/pkgconfig/: apriltags2.pc  apriltags2_ros.pc  camera_calibration.pc  ddynamic_reconfigure.pc  depth_image_proc.pc  image_proc.pc  image_publisher.pc  image_rotate.pc  image_view.pc  motor_control.pc  realsense2_camera.pc  stereo_image_proc.pc  task_control.pc  usb_cam.pc
ros/devel/lib/stereo_image_proc/: stereo_image_proc
ros/devel/lib/usb_cam/: usb_cam_node
ros/devel/share/apriltags2/cmake/: apriltags2Config.cmake
ros/devel/share/apriltags2_ros/cmake/: apriltags2_ros-msg-extras.cmake  apriltags2_ros-msg-paths.cmake  apriltags2_rosConfig.cmake
ros/devel/share/camera_calibration/cmake/: camera_calibrationConfig.cmake
ros/devel/share/ddynamic_reconfigure/cmake/: ddynamic_reconfigure-msg-extras.cmake  ddynamic_reconfigureConfig.cmake
ros/devel/share/depth_image_proc/cmake/: depth_image_procConfig.cmake
ros/devel/share/image_proc/cmake/: image_procConfig.cmake
ros/devel/share/image_publisher/cmake/: image_publisherConfig.cmake
ros/devel/share/image_rotate/cmake/: image_rotateConfig.cmake
ros/devel/share/image_view/cmake/: image_viewConfig.cmake
ros/devel/share/motor_control/cmake/: motor_controlConfig.cmake
ros/devel/share/realsense2_camera/cmake/: realsense2_camera-msg-extras.cmake  realsense2_camera-msg-paths.cmake  realsense2_cameraConfig.cmake
ros/devel/share/stereo_image_proc/cmake/: stereo_image_procConfig.cmake
ros/devel/share/task_control/cmake/: task_controlConfig.cmake
ros/devel/share/usb_cam/cmake/: usb_camConfig.cmake
ros/install/: .rosinstall  setup.sh
ros/install/include/apriltags2_ros/: AnalyzeSingleImageRequest.h  AprilTagDetectionArray.h
ros/install/include/image_proc/: CropDecimateConfig.h  ResizeConfig.h
ros/install/include/realsense2_camera/: Extrinsics.h
ros/install/lib/image_proc/: image_proc
ros/install/lib/image_publisher/: image_publisher
ros/install/lib/image_rotate/: image_rotate
ros/install/lib/image_view/: disparity_view  extract_images  image_saver  image_view  stereo_view  video_recorder
ros/install/lib/pkgconfig/: apriltags2.pc  apriltags2_ros.pc  camera_calibration.pc  ddynamic_reconfigure.pc  depth_image_proc.pc  image_proc.pc  image_publisher.pc  image_rotate.pc  image_view.pc  realsense2_camera.pc  stereo_image_proc.pc  usb_cam.pc
ros/install/lib/stereo_image_proc/: stereo_image_proc
ros/install/lib/usb_cam/: usb_cam_node
ros/install/share/apriltags2/cmake/: apriltags2Config.cmake
ros/install/share/apriltags2_ros/cmake/: apriltags2_rosConfig.cmake
ros/install/share/camera_calibration/cmake/: camera_calibrationConfig.cmake
ros/install/share/ddynamic_reconfigure/cmake/: ddynamic_reconfigureConfig.cmake
ros/install/share/depth_image_proc/cmake/: depth_image_procConfig.cmake
ros/install/share/image_proc/cmake/: image_procConfig.cmake
ros/install/share/image_publisher/cmake/: image_publisherConfig.cmake
ros/rviz_configs/: orbslam.rviz
ros/src/local/: CMakeLists.txt
ros/src/local/launch/: orbslam_test.launch
ros/src/mky_vctrl/: CMakeLists.txt  package.xml
ros/src/mky_vctrl/launch/: mky_joy_teleop.launch  mky_vctrl.launch
ros/src/mky_vctrl/src/: chassis_ctrl_node.cpp
ros/src/objdt/: CMakeLists.txt  package.xml
ros/src/objdt/config/: settings.yaml  tags.yaml
ros/src/objdt/launch/: apriltag_track.launch
ros/src/realsense/: imgui.ini
ros/src/task_control/: CMakeLists.txt  package.xml  setup.py
ros/src/task_control/launch/: simple_control.launch
ros/src/task_control/nodes/: simple_control
ros/src/task_control/src/task_control/: simple_control.py
stm32/RoboMky-Firmware/: .gitignore  readme.md
stm32/RoboMky-Firmware/MDK-ARM/: robomky.uvprojx
stm32/RoboMky-Firmware/MDK-ARM/app/: chassis_task.c  chassis_task.h  comm_task.c  comm_task.h  detect_task.c  info_get_task.c  info_get_task.h  info_interactive.c  info_interactive.h  sys_config.h
stm32/RoboMky-Firmware/MDK-ARM/bsp/: bsp_can.c  bsp_can.h  bsp_flash.c  bsp_uart.c  bsp_uart.h
stm32/RoboMky-Firmware/MDK-ARM/rmlib/: communicate.c  infantry_info.c  infantry_info.h
stm32/RoboMky-Firmware/Src/: freertos.c  main.c  usart.c
(+21 files in other folders)
